		just to the command-line (sorry). 
	Deprecated 'prefix' as a parameter.  You should instead use 'checkpoint-prefix'.
		This also hasn't been added to the GUI, just to the command-line.  This
		is deprecation -- you can still use 'prefix' for now, but you get a warning
		message.
	RegERC.toStringForHumans() now writes out the value as a double, not a float
	Fixed GUI so it works properly again with the revised version of
		ParameterDatabase.getLocation(...).  Thanks to David White 
		<david.r.white@glasgow.ac.uk>
	Modification to Evolve.java which breaks out initialize() into an
		initialize() and a buildOutput(), allowing us to customize the
		output generation.
	Added a Log.muzzle variable for Log.  ECJ had yanked out all of the
		verbosity stuff, but we should have probably kept at *least*
		the ability to have zero verbosity.  Note that Log.muzzle may
		be changed at a future date.
	GPNode.makeLispTree now uses StringBuffers rather than Strings to dump the tree.
	Output.log(...) -> Output.getLog(...)
	GEIndividual now prints out a list of ERC mappings for each byte used
		as an ERC in the genome.
	Bugfix in GESpecies: ERCs are based on the *next* gene index, not the
		current one.
	GEIndividual now prints out "Equivalent GP Individual:" instead of "Equivalent Tree:"
	Bugfixes in regression/Benchmarks.java
	RuleInitializer was not properly setting up the rule set constraints and repository.
		Thanks to Houston Mooers <hemooers@gmail.com>
	Updates to certain Crossover and Mutation operators in GP to allow for a maximum 
		size parameter.
	Fixes to DEBreeder and related breeders, such that new individuals are cloned from
		the prototype and not from other individuals.  This was causing evaluated
		flags to be never cleared.  Thanks to Andreas Meier 
		<andreas2.meier@st.ovgu.de>
	Fixed bug in RuleSet.removeRule() which was crashing because the wrong size array
		was being copied down to delete a rule.  Thanks to David Gagne
		<david.gagne1@maine.edu>