@@ -4,7 +4,3 @@
 
 parent.0 =				../../de/de.params
 parent.1 =				ecsuite.params
-
-# See ../../de/de.params for various options.
-
-generations = 1000
