@@ -140,8 +140,7 @@ public class DEBreeder extends Breeder
         {
         Individual[] inds = state.population.subpops[subpop].individuals;
 
-//        DoubleVectorIndividual v = (DoubleVectorIndividual)(inds[index].clone());
-        DoubleVectorIndividual v = (DoubleVectorIndividual)(state.population.subpops[subpop].species.i_prototype.clone());
+        DoubleVectorIndividual v = (DoubleVectorIndividual)(state.population.subpops[subpop].species.newIndividual(state, thread));
         do
             {
             // select three indexes different from each other and from that of the current parent
